Fix some styles in dark mode (#1640)

--- a/web/src/layout/package/Stats.module.css
+++ b/web/src/layout/package/Stats.module.css
@@ -1,3 +1,7 @@
 .icon {
   font-size: 70%;
 }
+
+.icon path {
+  stroke: inherit;
+}
